settings of some details

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ html {
 body, #root {
   height: 100%;
   font-family: $font-fam;
-  background-color: $blue-grey;
+  background-color: $light-gray;
 }
 
 .App-container {
