--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -3,12 +3,187 @@
 
 
 nav {
+  position: relative;
+  height: 90px;
+  line-height: 90px;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+
+  .logo_container {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  .nav_content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    .links {
+      @include align-flex(center);
+      margin-right: auto;
+      margin-left: 50px;
+      list-style-type: none;
+
+      a {
+        text-decoration: none;
+        margin: 0 15px;
+        color: $grayish-violet;
+        font-weight: 600;
+        transition: color ease 0.1s;
+
+        &:hover {
+          color: $very-dark-violet;
+        }
+      }
+    }
+
+    .sign {
+      .login_btn {
+        font-family: $font-fam;
+        font-size: 16px;
+        color: $grayish-violet;
+        font-weight: 700;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        transition: color ease 0.1s;
+
+        &:hover {
+          color: $very-dark-violet;
+        }
+      }
+
+      .signup_btn {
+        font-family: $font-fam;
+        margin: 0 20px;
+        color: $light-gray;
+        font-weight: 600;
+        font-size: 16px;
+        padding: 7px 20px;
+        border-radius: 20px;
+        background-color: $cyan;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        transition: filter ease 0.1s;
+
+        &:hover {
+          filter: opacity(50%);
+        }
+      }
+    }
+  }
+}
+
+.container_lines {
+  display: none;
   position: fixed;
-  width: 100%;
-  max-width: 1400px;
-  height: 70px;
-  background: $dark-blue;
-  color: $light-gray;
-  text-align: center;
-  line-height: 70px;
+  right: 5%;
+  top: 3%;
+  width: 33px;
+  height: 40px;
+  z-index: 100;
+  cursor: pointer;
+
+  .lines {
+    width: 100%;
+    height: 4px;
+    background-color: $grayish-violet;
+    border-radius: 5px;
+    position: absolute;
+    transition: all 0.5s ease-in-out;
+
+    &:nth-child(1) {
+      top: 10px;
+    }
+
+    &:nth-child(2) {
+      top: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  nav {
+    .container_lines {
+      display: flex;
+    }
+
+    .nav_content {
+      visibility: hidden;
+
+      &.active {
+        visibility: visible;
+        width: 80%;
+        position: fixed;
+        top: 10%;
+        left: 10%;
+        background: $dark-violet;
+        border-radius: 20px;
+        flex-direction: column;
+        padding: 10px 0 40px;
+        align-items: center;
+      }
+
+      .links {
+        flex-direction: column;
+        margin: 0;
+        width: 85%;
+
+        .nav_item {
+          height: 50px;
+        }
+
+        a {
+          color: $light-gray;
+          margin: 0;
+
+          &:hover {
+            color: $light-gray;
+          }
+        }
+      }
+
+      .sign {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        .login_btn {
+          color: $light-gray;
+          padding-top: 50px;
+
+          &::before {
+            content: "";
+            display: block;
+            background-color: $gray;
+            width: 100%;
+            height: 1px;
+            margin-bottom: 20px;
+          }
+
+          &:hover {
+            color: $light-gray;
+          }
+        }
+
+        .signup_btn {
+          padding: 10px 95px;
+
+          &:hover {
+            color: $light-gray;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+   .container_lines {
+      top: 4%;
+   }
 }
