--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,8 +3,20 @@
 
 
 .home_container {
-   padding-top: 100px;
-   text-align: center;
-   height: 30%;
-   background: $blue;
+   .bloc_img {
+      padding: 0 40px 50px;
+
+      img {
+         width: 150%;
+      }
+   }
+
+   .home_content {
+      h1 {
+         font-size: clamp(20px, 10vw, 60px);
+         text-align: center;
+      }
+   }
+
+
 }
