--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,8 +3,10 @@
 
 
 .home_container {
+   padding-top: 100px;
+   
    .bloc_img {
-      padding: 0 40px 50px;
+      padding: 0 40px 40px;
 
       img {
          width: 150%;
@@ -12,9 +14,25 @@
    }
 
    .home_content {
+      text-align: center;
+
       h1 {
-         font-size: clamp(20px, 10vw, 60px);
-         text-align: center;
+         font-size: clamp(30px, 11vw, 70px);
+         color: $dark-violet;
+         line-height: 1.2;
+      }
+
+      p {
+         color: $grayish-violet;
+         padding: 2em;
+         font-size: 18px;
+      }
+
+      button {
+         @include call_to_action;
+         margin: 0;
+         padding: 13px 50px;
+         font-size: 20px;
       }
    }
 
