--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,7 +3,7 @@
 
 
 .home_container {
-   padding-top: 100px;
+   padding: 7em 1em;
    
    .bloc_img {
       padding: 0 40px 40px;
@@ -17,7 +17,7 @@
       text-align: center;
 
       h1 {
-         font-size: clamp(30px, 11vw, 70px);
+         font-size: clamp(35px, 5vw, 75px);
          color: $dark-violet;
          line-height: 1.2;
       }
@@ -35,6 +35,45 @@
          font-size: 20px;
       }
    }
+}
+
+@media screen and (min-width: 800px) {
+   .home_container {
+      padding: 3em 1em;
+
+      .bloc_img {
+         img {
+            width: 120%;
+            padding-left: 5em;
+         }
+      }
+   }
+}
 
 
+@media screen and (min-width: 1024px) {
+    
+   .home_container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      place-items: center;
+
+      .bloc_img {
+         order: 2;
+
+         img {
+            width: 125%
+         }
+      }
+
+      .home_content {
+         text-align: initial;
+
+         p {
+            padding: 1em 0;
+            font-size: 22px;
+            width: 80%;
+         }
+      }
+   }
 }
