--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -56,23 +56,8 @@ nav {
         }
       }
 
-      .signup_btn {
-        font-family: $font-fam;
-        margin: 0 20px;
-        color: $light-gray;
-        font-weight: 600;
-        font-size: 16px;
-        padding: 7px 20px;
-        border-radius: 20px;
-        background-color: $cyan;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        transition: filter ease 0.1s;
-
-        &:hover {
-          filter: opacity(50%);
-        }
+      .call_to_action { 
+        @include call_to_action;
       }
     }
   }
@@ -108,6 +93,10 @@ nav {
 
 @media screen and (max-width: 700px) {
   nav {
+    position: fixed;
+    background-color: $light-gray;
+    width: $max-width;
+    
     .container_lines {
       display: flex;
     }
@@ -122,7 +111,7 @@ nav {
         top: 10%;
         left: 10%;
         background: $dark-violet;
-        border-radius: 20px;
+        border-radius: 10px;
         flex-direction: column;
         padding: 10px 0 40px;
         align-items: center;
@@ -159,8 +148,9 @@ nav {
           &::before {
             content: "";
             display: block;
-            background-color: $gray;
-            width: 100%;
+            background-color: $dark-gray;
+            width: 90%;
+            margin: 0 auto;
             height: 1px;
             margin-bottom: 20px;
           }
@@ -170,7 +160,7 @@ nav {
           }
         }
 
-        .signup_btn {
+        .call_to_action {
           padding: 10px 95px;
 
           &:hover {
@@ -184,6 +174,6 @@ nav {
 
 @media screen and (max-width: 400px) {
    .container_lines {
-      top: 4%;
+      top: 3.5%;
    }
 }
