--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $light-gray: #ececec;
 $lighter-gray: #887e7e0a;
 $mid-gray: #dbd9d9;
 $gray: #bfbfbf;
+$dark-gray: #bfbfbfde;
 
 $black: #333;
 $light-black: #00000033;
