Modification of color

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -25,7 +25,7 @@
 @mixin call_to_action {
   font-family: $font-fam;
   margin: 0 20px;
-  color: $light-gray;
+  color: $white;
   font-weight: 600;
   font-size: 16px;
   letter-spacing: 0.5px;
