--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -94,7 +94,7 @@ nav {
 @media screen and (max-width: 700px) {
   nav {
     position: fixed;
-    background-color: $light-gray;
+    background-color: $white;
     width: $max-width;
     
     .container_lines {
