--- a/src/index.scss
+++ b/src/index.scss
@@ -18,9 +18,6 @@ body, #root {
 }
 
 .App-container {
-  width: 100%;
   height: 100%;
-  max-width: $max-width;
-  margin: 0 auto;
-  overflow-x: hidden;
+  width: 100vw;
 }
