--- a/src/index.scss
+++ b/src/index.scss
@@ -13,11 +13,7 @@ html {
 }
 
 body, #root {
+  width: 100%;
   height: 100%;
   font-family: $font-fam;
-}
-
-.App-container {
-  height: 100%;
-  width: 100vw;
 }
