--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,10 +3,8 @@
 
 
 .global_container {
-   width: 100%;
-   height: 100%;
    max-width: $max-width;
-   margin: 0 auto;
+   margin: 0 auto 100px;
    overflow-x: hidden;
 }
 
@@ -64,7 +62,6 @@
 
 @media screen and (min-width: 1024px) {
    .global_container {
-      height: 80%;
       
       .home_container {
          display: grid;
