--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -4,7 +4,7 @@
 
 .global_container {
    max-width: $max-width;
-   margin: 0 auto 100px;
+   margin: 0 auto 150px;
    overflow-x: hidden;
 }
 
@@ -62,6 +62,7 @@
 
 @media screen and (min-width: 1024px) {
    .global_container {
+      padding: 0 5em;
       
       .home_container {
          display: grid;
@@ -82,7 +83,6 @@
             p {
                padding: 1em 0;
                font-size: 22px;
-               width: 80%;
             }
          }
       }
