Refactoring of the Navbar component in mobile view

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -3,177 +3,96 @@
 
 
 nav {
-  position: relative;
+  width: 100%;
   height: 90px;
-  line-height: 90px;
-  z-index: 1000;
-  display: flex;
-  align-items: center;
 
-  .logo_container {
-    margin-top: 20px;
-    margin-left: 20px;
-  }
-
-  .nav_content {
+  .navbar_container {
+    max-width: $max-width;
+    height: 100%;
+    margin: 0 auto;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    width: 100%;
+    padding: 0 1em;
 
-    .links {
-      @include align-flex(center);
-      margin-right: auto;
-      margin-left: 50px;
-      list-style-type: none;
-
-      a {
-        text-decoration: none;
-        margin: 0 15px;
-        color: $grayish-violet;
-        font-weight: 600;
-        transition: color ease 0.1s;
-
-        &:hover {
-          color: $very-dark-violet;
-        }
-      }
-    }
-
-    .sign {
-      .login_btn {
-        font-family: $font-fam;
-        font-size: 16px;
-        color: $grayish-violet;
-        font-weight: 700;
-        background-color: transparent;
-        border: none;
-        outline: none;
+    .hamburger {
+      svg {
+        font-size: 2em;
         cursor: pointer;
-        transition: color ease 0.1s;
-
-        &:hover {
-          color: $very-dark-violet;
-        }
-      }
-
-      .call_to_action { 
-        @include call_to_action;
       }
     }
   }
 }
 
-.container_lines {
-  display: none;
-  position: fixed;
-  right: 5%;
-  top: 3%;
-  width: 33px;
-  height: 40px;
-  z-index: 100;
-  cursor: pointer;
+.nav_content {
+  position: absolute;
+  top: -100%;
+  left: 10%;
+  height: calc(65vh - 90px);
+  width: 80%;
+  background: $dark-violet;
+  border-radius: 15px;
+  transition: 0.5s;
+  flex-direction: column;
+  @include align-flex(center);
 
-  .lines {
-    width: 100%;
-    height: 4px;
-    background-color: $grayish-violet;
-    border-radius: 5px;
-    position: absolute;
-    transition: all 0.5s ease-in-out;
+  &.active {
+    top: 90px;
+  }
 
-    &:nth-child(1) {
-      top: 10px;
+  .links {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+
+    a {
+      text-decoration: none;
+      color: $white;
+      font-size: 1em;
+      font-weight: 700;
+      letter-spacing: 0.2px;
+    }
+  }
+
+  .white_line {
+    width: 80%;
+    margin: 0 auto;
+    background-color: $gray;
+    height: 1px;
+    margin: 1em 0;
+  }
+
+  .btn_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5em;
+
+    .login_btn {
+      font-family: $font-fam;
+      font-size: 1em;
+      color: $white;
+      font-weight: 700;
+      background-color: transparent;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      transition: color ease 0.1s;
     }
 
-    &:nth-child(2) {
-      top: 20px;
+    .call_to_action {
+      @include call_to_action;
+      letter-spacing: 0.2px;
+      font-size: 1em;
+      font-weight: 700;
     }
   }
 }
 
-@media screen and (max-width: 700px) {
-  nav {
-    position: fixed;
-    background-color: $white;
-    width: $max-width;
-    
-    .container_lines {
-      display: flex;
-    }
-
-    .nav_content {
-      visibility: hidden;
-
-      &.active {
-        visibility: visible;
-        width: 80%;
-        position: fixed;
-        top: 10%;
-        left: 10%;
-        background: $dark-violet;
-        border-radius: 10px;
-        flex-direction: column;
-        padding: 10px 0 40px;
-        align-items: center;
-      }
-
-      .links {
-        flex-direction: column;
-        margin: 0;
-        width: 85%;
-
-        .nav_item {
-          height: 50px;
-        }
-
-        a {
-          color: $light-gray;
-          margin: 0;
-
-          &:hover {
-            color: $light-gray;
-          }
-        }
-      }
-
-      .sign {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-
-        .login_btn {
-          color: $light-gray;
-          padding-top: 50px;
-
-          &::before {
-            content: "";
-            display: block;
-            background-color: $dark-gray;
-            width: 90%;
-            margin: 0 auto;
-            height: 1px;
-            margin-bottom: 20px;
-          }
-
-          &:hover {
-            color: $light-gray;
-          }
-        }
-
-        .call_to_action {
-          padding: 10px 95px;
-
-          &:hover {
-            color: $light-gray;
-          }
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 400px) {
-   .container_lines {
-      top: 3.5%;
+@media screen and (min-width: 390px){
+   .nav_content {
+      height: calc(50vh - 90px);
    }
 }
