--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -15,6 +15,10 @@ nav {
     justify-content: space-between;
     padding: 0 1em;
 
+    .logo_container {
+      padding-top: 0.2em;
+    }
+
     .hamburger {
       svg {
         font-size: 2em;
