Correction of some details

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,6 +16,7 @@ $light-black: #00000033;
 $light-violet: #f3ebf6;
 $dark-violet:  #3b3054;
 $grayish-violet: #9e9aa7;
+$darker-violet: #322d3c;
 $very-dark-violet: #232127;
 
 $blue-grey: #cddeee;
