Modification of the background color of the Service page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -20,7 +20,7 @@ $darker-violet: #322d3c;
 $very-dark-violet: #232127;
 
 $blue-grey: #cddeee;
-$light-blue: #86aed3;
+$light-blue: #f1f2f6ef ;
 $blue: #2b649c;
 $dark-blue: #1c4165;
 $very-dark-blue:#35323e;
