--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -51,6 +51,11 @@
          padding: 0.8em 3.5em;
          font-size: 1.2em;
          letter-spacing: 1px;
+
+         a {
+            text-decoration: none;
+            color: $white;
+         }
       }
    }
 }
