--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,7 +13,7 @@ $dark-gray: #bfbfbfde;
 $black: #333;
 $light-black: #00000033;
 
-$light-violet: #f3ebf6;
+$light-violet: #f3ebf6e7;
 $dark-violet:  #3b3054;
 $grayish-violet: #9e9aa7;
 $darker-violet: #322d3c;
