--- a/src/pages/Services/Services.module.scss
+++ b/src/pages/Services/Services.module.scss
@@ -53,7 +53,6 @@
   }
 }
 
-
 .services_informations {
   display: flex;
   flex-direction: column;
@@ -119,13 +118,12 @@
 
 @media screen and (min-width: 1400px) {
   .services_container {
-    height: 90vh;
-
     .services_content {
       .services_list {
         flex-direction: row;
         gap: 2em;
         margin: 0 auto;
+        padding-bottom: 6em;
       }
     }
   }
