--- a/src/components/Services/Card/Card.module.scss
+++ b/src/components/Services/Card/Card.module.scss
@@ -1,5 +1,5 @@
-@import "../../scss/_mixins.scss";
-@import "../../scss/variables.scss";
+@import "../../../scss/_mixins.scss";
+@import "../../../scss/variables.scss";
 
 
 .card_container {
