--- a/src/components/Services/CardList/CardList.module.scss
+++ b/src/components/Services/CardList/CardList.module.scss
@@ -1,5 +1,5 @@
-@import "../../scss/_mixins.scss";
-@import "../../scss/variables.scss";
+@import "../../../scss/_mixins.scss";
+@import "../../../scss/variables.scss";
 
 .services_informations {
   display: flex;
