--- a/src/components/Services/Links/Links.module.scss
+++ b/src/components/Services/Links/Links.module.scss
@@ -1,5 +1,5 @@
-@import "../../scss/_mixins.scss";
-@import "../../scss/variables.scss";
+@import "../../../scss/_mixins.scss";
+@import "../../../scss/variables.scss";
 
 .shorten_links_container {
   width: 85%;
