--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -117,7 +117,7 @@
         overflow: visible;
       }
       .home_description {
-        padding: 6em 1em 0;
+        padding: 0 1em;
       }
     }
   }
